# mcp-google-agent-platform-docs

./: LICENSE  README.md  dev_server.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
sources/: geap.yaml  vertex-ai.yaml
src/mcp_google_agent_platform_docs/: __init__.py  cache.py  config.py  discovery.py  fetcher.py  search.py  server.py  source.py
